2007-12-20  Joel Brobecker  <brobecker@adacore.com>

	* symtab.h: Remove "defs.h" #include.
	* Makefile.in (symtab_h): Update dependencies.

2007-12-19  Joel Brobecker  <brobecker@adacore.com>

	* symtab.h: #include "defs.h".
	(enum language): Remove opaque declaration.
	* Makefile.in (symtab_h): Update dependencies.

2007-12-19  Joel Brobecker  <brobecker@adacore.com>

	* language.h (enum exp_opcode): Remove commented out forward
	declaration.
	(op_error): Delete declaration.

2007-12-19  Joel Brobecker  <brobecker@adacore.com>

	* infrun.c (handle_inferior_event): Fix spelling in comment.

2007-12-18  Daniel Jacobowitz  <dan@codesourcery.com>

	* minsyms.c (lookup_minimal_symbol): Also check the separate
	debug objfile.
	(lookup_minimal_symbol_text): Likewise.
	(lookup_minimal_symbol_solib_trampoline): Likewise.
	* symtab.c (lookup_global_symbol_from_objfile): Likewise.

2007-12-18  Vladimir Prus  <vladimir@codesourcery.com>

	* mi/mi-main.c (mi_cmd_list_features): Announce
	the 'pending-breakpoints' feature.

2007-12-17  Jim Blandy  <jimb@codesourcery.com>

	* dwarf2read.c (dwarf2_add_field): Correctly scale all byte
	offsets obtained from DW_AT_data_member_location before recording
	them in FIELD_BITPOS (*fp).

	* dwarf2read.c (attr_form_is_section_offset): Doc fixes.

2007-12-17  Nigel Stephens  <nigel@mips.com>
            Maciej W. Rozycki  <macro@mips.com>

	* utils.c (string_to_core_addr): If the executable format
	indicates that addresses should be sign-extended and there are
	only 8 hex digits in the address, then do so.
	* Makefile.in (utils.o): Depend on $(gdbcore_h).

2007-12-17  Chris Dearman  <chris@mips.com>

	* symfile.c (init_filename_language_table): Recognise .sx as
	an assembler file.

2007-12-17  Joel Brobecker  <brobecker@adacore.com>

	* language.h (enum exp_opcode): Comment out this declaration,
	undoing the previous change.

2007-12-17  Luis Machado  <luisgpm@br.ibm.com>
